# Cinema_Management_System

./: CMakeLists.txt  CalculatePrice.hpp  Cinema.cpp  Cinema.hpp  Common.cpp  Common.hpp  CreditPaymentMethod.hpp  GoldenSeat.h  Movie.cpp  Movie.hpp  MoviesSearcher.hpp  MoviesViewer.hpp  PaymentMethod.hpp  PaypalPaymentMethod.hpp  PremiumSeat.h  README.md  RegularSeat.h  RegularUser.hpp  Seat.h  SeatFactory.hpp  Ticket.cpp  Ticket.hpp  TicketBooker.h  User.cpp  User.hpp  VipUser.hpp  main.cpp
